# Messenger

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Client/: CMakeLists.txt  chatclient.cpp  chatclient.h  chatwindow.cpp  chatwindow.h  chatwindow.ui  clientcore.cpp  clientcore.h  clientmain.cpp  clientwindow.cpp  clientwindow.h  loadingscreen.cpp  loadingscreen.h  loadingscreen.ui  login.cpp  login.h  login.ui  main.cpp  register.cpp  register.h  register.ui  window.ui
Client/resources/: resources.qrc
Server/: CMakeLists.txt  chatserver.cpp  chatserver.h  connectionpool.cpp  connectionpool.h  db.cpp  db.h  main.cpp  servercontroller.cpp  servercontroller.h  servercore.cpp  servercore.h  servermain.cpp  serverwindow.cpp  serverwindow.h  serverworker.cpp  serverworker.h
Server/sql/: create_db.sql  create_tables.sql  drop_tables.sql  select_all.sql  test.sql
common/: constants.h  utils.cpp  utils.h
docs/: Садыков И. Н. 09-812 бланк задания на курсовую.docx  Садыков И. Н. 09-812 курсовая работа.docx  Садыков И. Н. 09-812 отзыв.docx  Садыков И. Н. 09-812 презентация курсового проекта.pptx  текст к презентации.docx
docs/диплом/: 11_Razreshenie_Na_Razmeschenie_Vkr.docx  12_Blank_Zayavlenia.docx  1_Zayavlenie_Na_Vkr.docx  4_Otzyv_shablon.docx  5_Retsenzia_shablon.docx  6_Kharakteristika_Starosty.docx  Trebovania.docx  Разработка десктопного клиент - серверного мессенджера на C++ с функциями шифрования.docx  Разработка десктопного клиент - серверного мессенджера на Cpp с функциями шифрования.docx  Садыков И. Н. 09-812 дипломная работа без листинга.docx  Садыков И. Н. 09-812 дипломная работа.docx  доки для вкр.xlsx  заявление на вкр.docx  отзыв руководителя.docx  рецензия.docx  текст к презентации.docx  характеристика старосты.docx
docs/курсач/: Metodicheskie_Rekomendatsii_K_Zadaniyu_Po_Kursovoy_Rabote.doc  Metodicheskie_Rekomendatsii_Po_Kursovoy_Rabote_Bakalavrov.docx  Садыков И. Н. 09-812 бланк задания на курсовую.docx  Садыков И. Н. 09-812 презентация курсового проекта.pptx  текст к презентации.docx
docs/практика/: + бланк задания на бакалавры.docx  + индивидуальное задание производственной практики.docx  + отзыв практика.docx  + отчет производственной практики студента.docx  бланк задания на бакалавры.docx  дневник производственной практики студента.docx  индивидуальное задание производственной практики.docx  отзыв практика.docx  отчет производственной практики студента.docx  оценочный лист руководителя практики.docx  таблица для отчета с примерами.docx
src/Client/: CMakeLists.txt  clientcore.cpp  clientcore.h  clientwindow.cpp  clientwindow.h  creategroup.cpp  creategroup.h  creategroup.ui  loadingscreen.cpp  loadingscreen.h  login.cpp  login.h  login.ui  main.cpp  register.cpp  register.h  register.ui
src/Client/resources/: resources.qrc
src/Server/: CMakeLists.txt  connectionpool.cpp  connectionpool.h  db.cpp  db.h  main.cpp  servercore.cpp  servercore.h  serverworker.cpp  serverworker.h
src/Server/sql/: create_tables.sql  select_all.sql  truncate_tables.sql
src/common/: constants.h  message.cpp  message.h
ssl/: ssl.cert  ssl.key
